--- a/environment.yml
+++ b/environment.yml
@@ -13,7 +13,8 @@ dependencies:
   - pandas=2.2.2
   - scipy=1.13.1
   - statsmodels=0.14.2
-  - py-xgboost 
-  - lightgbm   
-  - catboost 
+  - scikit-image=0.25.0
+  - py-xgboost
+  - lightgbm
+  - catboost
   - pip
